Visual changes - colors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/resume.css" rel="stylesheet">
 
 </head>
 
@@ -91,7 +91,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Técnico em Gpon - Redes Ópticas</h3>
             <div class="subheading mb-3">Alpitel Brasil Implantações de Sistemas</div>
-            <p>Instalações de sistemas de telecom, desdeo cabeamento até a configuração final para o usuário.</p>
+            <p>Instalações de sistemas de telecom, desde o cabeamento até a configuração final para o usuário.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Fevereiro 2019 - Janeiro 2020</span>
@@ -132,7 +132,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">SENAI Uberaba - CFPFR</h3>
+            <h3 class="mb-0">SENAI Uberaba - Centro de Formação Profissional Fidélis Reis</h3>
             <div class="subheading mb-3">Técnico em Eletrônica</div>
           </div>
           <div class="resume-date text-md-right">
