--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@
         <div class="subheading mb-5">Uberaba · Minas Gerais, BR ·
           <a href="mailto:airtons.f@hotmail.com">airtons.f@hotmail.com</a>
         </div>
-        <p class="lead mb-5">Olá, mundo! Sou técnico em Eletrônica, atualmente licenciando em computação pelo Instituto Federal do Triângulo Mineiro e estudante de desenvolvimento full-stack, com as tecnologias: Javascript, Angular 8, .NET + C#, Python, SCRUM, PostgreSQL. Grande interesse por novas tecnologias que possam melhorar a vida das pessoas.</p>
+        <p class="lead mb-5">Desde pequeno já me interessava pela resolução de problemas e em descobrir como os dispositivos funcionavam. Daí surgiu a oportunidade de cursar Eletrônica. Nesse curso pude aprender muito e ver que é uma área muito ampla. O primeiro contato com a programação foi com a matéria de Algoritmos e Lógica, depois PICs e desenvolvimento com C/C++. Hoje me interesso muito por IoT, desenvolvimento web e mobile, e passo a maior parte do tempo buscando aprender coisas novas na tecnologia.
+
+          Meus conhecimentos incluem: C, Javascript, Java, Node.js, HTML, CSS, MySQL.
+          Atualmente estudando: Mobile - React Native e Web - ReactJS
+          
+          Meu maior objetivo de carreira é ajudar a comunidade dev e me tornar um engenheiro de software e assim ajudar a tornar mais fácil a vida das pessoas através de proporcionar uma boa experiência e uso da tecnologia!
+          
+          www.github.com/airtonfel</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/airtonfel/">
             <i class="fab fa-linkedin-in"></i>
@@ -123,7 +130,7 @@
             <h3 class="mb-0">Instituto Federal do Triângulo Mineiro</h3>
             <div class="subheading mb-3">Licenciatura em computação</div>
             <div>Área: Tecnologia da Informação</div>
-            <p>• Cursando</p>
+            <p>• Cursando 6º Período</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Janeiro 2018 - Dezembro 2021</span>
@@ -172,13 +179,7 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Design responsivo</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Multiplataforma</li>
+            Mobile, Web & Desktop</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Desenvolvimento Ágil &amp; Scrum</li>
